# Discord_Task_Manager_Bot

./: .gitignore  README.md
Bot/: main.py
Task_Management/: CMakeLists.txt  Makefile  date.h  main.c  main.cpp  main.h  task.h
Task_Management/Date/: date.c  date.cpp  date.h  help.cpp
Task_Management/Task/: task.c  task.cpp  task.h
Task_Management/Tests/: Makefile  testsDate.c  testsDate.h  testsTask.c
Task_Management/Tests/Utils/Date/: utilsDate.c  utilsDate.h
Task_Management/UserData/: ...  createFile.c  createFile.h
